<resources>
    <string name="app_name">Inholland Newsreader</string>
    <string name="article_title">Title %d</string>
    <string name="article_summary">Summary %d</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, has putent delectus at. Mea in facer falli eruditi. Te eum prompta inermis, eu latine scribentur vel, unum deserunt pertinacia sea eu. Mea feugait partiendo sapientem id, usu et hinc labores persequeris.</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="failure">Check internet connection and try again</string>
    <string name="error">Oops, something went wrong</string>
    <string name="retry">Retry</string>
    <string name="title_activity_hamburger">HamburgerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Uitloggen</string>
    <string name="hamburger_menu">Menu</string>
    <string name="greeting">Hello, %1$s</string>
    <string name="default_user">Gast</string>

    <string name="favorite_off">♡</string>
    <string name="favorite_on">❤</string>
</resources>
