<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jeroe.inhollandnewsreader_student550395.Activities.DetailActivity">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        tools:background="#FF00FF" />

    <Button
        android:id="@+id/favorite_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/favorite_off"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        tools:text="Listitem 1" />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        tools:text="@string/loremipsum" />

</LinearLayout>