<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="start"
    android:background="#eee"
    android:choiceMode="singleChoice"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
    android:id="@+id/username_label"
    android:layout_width="200dp"
    android:layout_height="30dp"
    android:labelFor="@+id/Username"
    android:text="@string/username"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"/>

    <EditText
    android:id="@+id/Username"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:layout_below="@+id/username_label"
    android:inputType="text"
    android:layout_marginBottom="20dp"/>

    <TextView
    android:id="@+id/password_label"
    android:layout_width="200dp"
    android:layout_height="30dp"
    android:labelFor="@+id/Password"
    android:text="@string/password"
    android:layout_below="@id/Username"
    android:layout_alignParentStart="true"/>

    <EditText
    android:id="@+id/Password"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:layout_below="@+id/password_label"
    android:inputType="textPassword"
    android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>